--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "framer-motion": "^12.23.3",
+    "framer-motion": "^12.23.6",
+    "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
